--- a/rf_dialog.ui
+++ b/rf_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>566</width>
+    <width>1059</width>
     <height>430</height>
    </rect>
   </property>
@@ -34,8 +34,8 @@
   <widget class="QPushButton" name="btn_update">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>390</y>
+     <x>420</x>
+     <y>320</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -47,7 +47,7 @@
   <widget class="QComboBox" name="cmb_ports">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>160</x>
      <y>360</y>
      <width>161</width>
      <height>22</height>
@@ -59,7 +59,7 @@
     <rect>
      <x>40</x>
      <y>360</y>
-     <width>71</width>
+     <width>91</width>
      <height>20</height>
     </rect>
    </property>
@@ -72,7 +72,7 @@
     <rect>
      <x>30</x>
      <y>320</y>
-     <width>131</width>
+     <width>171</width>
      <height>23</height>
     </rect>
    </property>
@@ -136,7 +136,7 @@
      <rect>
       <x>10</x>
       <y>110</y>
-      <width>91</width>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -162,7 +162,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>91</width>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -188,7 +188,7 @@
      <rect>
       <x>10</x>
       <y>70</y>
-      <width>91</width>
+      <width>131</width>
       <height>16</height>
      </rect>
     </property>
@@ -325,6 +325,207 @@
      <number>9</number>
     </property>
    </widget>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>80</y>
+     <width>20</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>20</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>FreeSerif</family>
+     <pointsize>17</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Readings</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>110</y>
+     <width>131</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Frequency (MHz):</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblReadFreq">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>110</y>
+     <width>231</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>----</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>596</x>
+     <y>160</y>
+     <width>111</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ch. 1 attn (dB):</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblAttn1">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>160</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>---</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_14">
+   <property name="geometry">
+    <rect>
+     <x>596</x>
+     <y>220</y>
+     <width>111</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ch. 3 attn (dB):</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblAttn3">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>220</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>---</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_16">
+   <property name="geometry">
+    <rect>
+     <x>596</x>
+     <y>190</y>
+     <width>111</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ch. 2 attn (dB):</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblAttn2">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>190</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>---</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_17">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>280</y>
+     <width>71</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>PLL Lock:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblPLL">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>280</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>---</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>320</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Mode :</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lblMode">
+   <property name="geometry">
+    <rect>
+     <x>740</x>
+     <y>320</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>---</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnOpen">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>390</y>
+     <width>99</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Open Port</string>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
